# opengl

./: .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: init_gl.cpp  init_gl.h  shader.cpp  shader.h  texture.cpp  texture.h
src/tutorials/: CMakeLists.txt
src/tutorials/03_shader_basics/: main.cpp
src/tutorials/04_texture/: main.cpp  shader.fs  shader.vs
src/tutorials/05_transformation/: main.cpp  shader.fs  shader.vs
src/tutorials/06_coordinate_system/: README.md  main.cpp
src/tutorials/07_camera/: main.cpp  shader.vs
tli/: 24_08_22.md
